Uploaded image for project: 'Geode'
  1. Geode
  2. GEODE-8565

c++ client tries to connect to down server until IO error is thrown

    XMLWordPrintableJSON

Details

    Description

      This ticket is an improvement over GEODE-8231:

      If a C++ client connected to a cluster is sending operations to a partitioned region and one of the server goes down, the client keeps trying to send operations to the down server. This can be observed in the logs by a continuous flow of lines containing: "IO error in handshake with endpoint..."

      After that improvement, the c++ client removes the metadata info of the failing server once the "IO error in handshake" is received.

      But it has been observed that before that error is received, "timeout error" can be returned. So the client will try to reconnect until the "IO error in handshake" is received.

      This ticket aims to extend the GEODE-8231 solution so the client removes the server metadata information when a timeout is received.

      Attachments

        Issue Links

          Activity

            People

              alberto.bustamante.reyes Alberto Bustamante Reyes
              alberto.bustamante.reyes Alberto Bustamante Reyes
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: