GEODE-8565: Verify client metadata was removed at first error